--- a/index.html
+++ b/index.html
@@ -137,7 +137,8 @@
                 <div 
                   style="display: flex;
                          align-items: center;
-                         margin-top: 10px;">
+                         margin-top: 20px;
+                         margin-right: 94px">
                     <div 
                         style="
                             height: 0.5px; 
