--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
                              width: 300px; 
                              font-weight: 600;
                              border-radius: 30px;
-                             margin-top: 10px;"
+                             margin-top: 10px;
+                             display: block;"
                 >
                 <svg 
                      viewBox="0 0 24 24" 
